--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <script src="scripts/CardFactory.js"></script>
     <script src="scripts/DeckFactory.js"></script>
     <script src="scripts/GameCtrl.js"></script>
+    <script src="scripts/GameFactory.js"></script>
 </body>
 
 </html>
