Game working, AI working, ready for graphics

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <script src="scripts/DeckFactory.js"></script>
     <script src="scripts/GameCtrl.js"></script>
     <script src="scripts/GameFactory.js"></script>
+    <script src="scripts/ComputerPlayerFactory.js"></script>
 </body>
 
 </html>
