Using modals to inform the user, game ends correctly now

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <script src="scripts/GameCtrl.js"></script>
     <script src="scripts/GameFactory.js"></script>
     <script src="scripts/ComputerPlayerFactory.js"></script>
+    <script src="scripts/PlayerOutModalCtrl.js"></script>
 </body>
 
 </html>
