--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
+    <!--<link rel="stylesheet" href="styles/journal.min.css">-->
 	<link rel="stylesheet" href="bower_components/fontawesome/css/font-awesome.min.css">
 	
 	<link rel="stylesheet" href="styles/main.css">
 </head>
 
-<body ng-app="ninetynine">
+<body ng-app="ninetynine" ng-controller="IndexCtrl" ng-class="background">
 
     <div class="container">
 		<div ui-view></div>
@@ -27,8 +28,8 @@
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
+    <script src="bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
     
-
     <script src="scripts/app.js"></script>
     <script src="lib/LodashFactory.js"></script>
     <script src="scripts/CardFactory.js"></script>
@@ -37,6 +38,9 @@
     <script src="scripts/GameFactory.js"></script>
     <script src="scripts/ComputerPlayerFactory.js"></script>
     <script src="scripts/PlayerOutModalCtrl.js"></script>
+    <script src="scripts/MainCtrl.js"></script>
+    <script src="scripts/NewGameModalCtrl.js"></script>
+    <script src="scripts/IndexCtrl.js"></script>
 </body>
 
 </html>
