--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
     <script src="bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
+    <script src="bower_components/moment/min/moment.min.js"></script>
     
     <script src="scripts/app.js"></script>
     <script src="lib/LodashFactory.js"></script>
+    <script src="lib/MomentFactory.js"></script>
     <script src="scripts/CardFactory.js"></script>
     <script src="scripts/DeckFactory.js"></script>
     <script src="scripts/GameCtrl.js"></script>
