--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
     <script src="scripts/InstructionsCtrl.js"></script>
     <script src="scripts/AchievementFactory.js"></script>
     <script src="scripts/AchievementDisplayFactory.js"></script>
+    <script src="scripts/StatsCtrl.js"></script>
+    <script src="scripts/ResetStatsModalCtrl.js"></script>
 </body>
 
 </html>
