Created audio player directive

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
-    <!--<link rel="stylesheet" href="styles/journal.min.css">-->
     <link rel="stylesheet" href="bower_components/fontawesome/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="bower_components/animate.css/animate.min.css">
@@ -69,6 +68,9 @@
     <script src="scripts/ResetStatsModalCtrl.js"></script>
     <script src="scripts/NavBarDirective.js"></script>
     <script src="scripts/SharedNavBarFactory.js"></script>
+    <script src="scripts/AudioPlayerDirective.js"></script>
+    
+    <audio-player source="music/AhDah.mpg" playing="true"></audio-player>
 </body>
 
 </html>
