--- a/index.html
+++ b/index.html
@@ -69,8 +69,10 @@
     <script src="scripts/NavBarDirective.js"></script>
     <script src="scripts/SharedNavBarFactory.js"></script>
     <script src="scripts/AudioPlayerDirective.js"></script>
+    <script src="scripts/BackgroundMusicFactory.js"></script>
     
-    <audio-player source="music/AhDah.mpg" playing="true"></audio-player>
+    <audio-player source="'music/AhDah.mp3'" playing="backgroundMusic.menuMusic"></audio-player>
+    <audio-player source="'music/JellyfishInSpace.mp3'" playing="backgroundMusic.gameMusic"></audio-player>
 </body>
 
 </html>
