--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Ninety-Nine</title>
 
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
+    <!--<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">-->
+    <link rel="stylesheet" href="styles/paper.min.css">
     <link rel="stylesheet" href="bower_components/fontawesome/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="bower_components/animate.css/animate.min.css">
@@ -71,8 +72,8 @@
     <script src="scripts/AudioPlayerDirective.js"></script>
     <script src="scripts/BackgroundMusicFactory.js"></script>
     
-    <audio-player source="'music/AhDah.mp3'" playing="backgroundMusic.menuMusic"></audio-player>
-    <audio-player source="'music/JellyfishInSpace.mp3'" playing="backgroundMusic.gameMusic"></audio-player>
+    <!--<audio-player source="'music/AhDah.mp3'" playing="backgroundMusic.menuMusic"></audio-player>-->
+    <!--<audio-player source="'music/JellyfishInSpace.mp3'" playing="backgroundMusic.gameMusic"></audio-player>-->
 </body>
 
 </html>
