Layout much better, new music (game music placeholder due to licensing restrictions)

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
     <script src="scripts/AudioPlayerDirective.js"></script>
     <script src="scripts/BackgroundMusicFactory.js"></script>
     
-    <!--<audio-player source="'music/AhDah.mp3'" playing="backgroundMusic.menuMusic"></audio-player>-->
-    <!--<audio-player source="'music/JellyfishInSpace.mp3'" playing="backgroundMusic.gameMusic"></audio-player>-->
+    <audio-player source="'music/Yinyues-Triangles.mp3'" playing="backgroundMusic.menuMusic"></audio-player>
+    <audio-player source="'music/CyanMusic-Nachtwerk.mp3'" playing="backgroundMusic.gameMusic"></audio-player>
 </body>
 
 </html>
