Added pause menu with ability to disable music, added option to disable music to title screen too

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en-us">
 
 <head>
@@ -58,6 +58,7 @@
     <script src="scripts/game/GameFactory.js"></script>
     <script src="scripts/game/ComputerPlayerFactory.js"></script>
     <script src="scripts/game/AchievementFactory.js"></script>
+    <script src="scripts/game/SettingsFactory.js"></script>
     <script src="scripts/screens/GameCtrl.js"></script>
     <script src="scripts/screens/MainCtrl.js"></script>
     <script src="scripts/screens/StatsCtrl.js"></script>
@@ -69,11 +70,13 @@
     <script src="scripts/modals/PlayerOutModalCtrl.js"></script>
     <script src="scripts/modals/ResetStatsModalCtrl.js"></script>
     <script src="scripts/modals/NewGameModalCtrl.js"></script>
+    <script src="scripts/modals/PauseModalCtrl.js"></script>
     <script src="scripts/directives/NavBarDirective.js"></script>
     <script src="scripts/directives/AudioPlayerDirective.js"></script>
+    <script src="scripts/helpers/LocalStorageHelperFactory.js"></script>
     
-    <!--<audio-player source="'music/Yinyues-Triangles.mp3'" playing="backgroundMusic.menuMusic"></audio-player>-->
-    <!--<audio-player source="'music/CyanMusic-Nachtwerk.mp3'" playing="backgroundMusic.gameMusic"></audio-player>-->
+    <audio-player source="'music/Yinyues-Triangles.mp3'" playing="backgroundMusic.menuMusic"></audio-player>
+    <audio-player source="'music/CyanMusic-Nachtwerk.mp3'" playing="backgroundMusic.gameMusic"></audio-player>
 </body>
 
 </html>
