Should work with new game screen now

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     <script src="scripts/game/AchievementFactory.js"></script>
     <script src="scripts/game/SettingsFactory.js"></script>
     <script src="scripts/screens/GameCtrl.js"></script>
+    <script src="scripts/screens/NewGameCtrl.js"></script>
     <script src="scripts/screens/MainCtrl.js"></script>
     <script src="scripts/screens/StatsCtrl.js"></script>
     <script src="scripts/screens/IndexCtrl.js"></script>
@@ -68,6 +69,7 @@
     <script src="scripts/shared/ScreenSettingsFactory.js"></script>
     <script src="scripts/shared/BackgroundMusicFactory.js"></script>
     <script src="scripts/modals/PlayerOutModalCtrl.js"></script>
+    <script src="scripts/modals/PlayerWonModalCtrl.js"></script>
     <script src="scripts/modals/ResetStatsModalCtrl.js"></script>
     <script src="scripts/modals/NewGameModalCtrl.js"></script>
     <script src="scripts/modals/PauseModalCtrl.js"></script>
