Cleaned up achievement dialog for multiple resolutions

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav-bar title="screenSettings.title" back-button-func="screenSettings.backButtonFunc" options-button-func="screenSettings.optionsButtonFunc" options-button-text="screenSettings.optionsButtonText" visible="screenSettings.navBarVisible"></nav-bar>
 
     <div class="container-fluid">
-        <div class="achievement animated" ng-if="achievementDisplay.firstAchievementShown" ng-hide="hideAchievement" ng-class="{'fadeInDownBig': achievementDisplay.show, 'fadeOutUpBig': !achievementDisplay.show}">
+        <div class="achievement animated" ng-if="achievementDisplay.firstAchievementShown" ng-hide="hideAchievement" ng-class="{'fadeInUpBig': achievementDisplay.show, 'fadeOutDownBig': !achievementDisplay.show}">
             <div class="alert alert-info" role="alert">
                 <div class="media">
                     <div class="media-left">
