Refactor of settings complete.  Broke some other stuff that referenced it.

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <script src="scripts/game/ComputerPlayerFactory.js"></script>
     <script src="scripts/game/AchievementFactory.js"></script>
     <script src="scripts/game/SettingsFactory.js"></script>
+    <script src="scripts/game/ConfigurationFactory.js"></script>
     <script src="scripts/screens/GameCtrl.js"></script>
     <script src="scripts/screens/NewGameCtrl.js"></script>
     <script src="scripts/screens/MainCtrl.js"></script>
