Settings can be edited from the main menu.  Need to port to pause menu still.

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     <script src="scripts/screens/StatsCtrl.js"></script>
     <script src="scripts/screens/IndexCtrl.js"></script>
     <script src="scripts/screens/InstructionsCtrl.js"></script>
+    <script src="scripts/screens/SettingsCtrl.js"></script>
     <script src="scripts/shared/AchievementDisplayFactory.js"></script>
     <script src="scripts/shared/ScreenSettingsFactory.js"></script>
     <script src="scripts/shared/BackgroundMusicFactory.js"></script>
@@ -74,6 +75,7 @@
     <script src="scripts/modals/PauseModalCtrl.js"></script>
     <script src="scripts/directives/NavBarDirective.js"></script>
     <script src="scripts/directives/AudioPlayerDirective.js"></script>
+    <script src="scripts/directives/SettingsEditorDirective.js"></script>
     <script src="scripts/helpers/LocalStorageHelperFactory.js"></script>
     
     <audio-player source="'music/Yinyues-Triangles.mp3'" playing="backgroundMusic.menuMusic"></audio-player>
