--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
     <script src="scripts/directives/SettingsEditorDirective.js"></script>
     <script src="scripts/helpers/LocalStorageHelperFactory.js"></script>
     
-    <audio-player source="'music/Yinyues-Triangles.mp3'" playing="backgroundMusic.menuMusic"></audio-player>
-    <audio-player source="'music/CyanMusic-Nachtwerk.mp3'" playing="backgroundMusic.gameMusic"></audio-player>
+    <audio-player source="'music/CMA-WithoutYou.mp3'" playing="backgroundMusic.menuMusic"></audio-player>
+    <audio-player source="'music/CMA-YoureFree.mp3'" playing="backgroundMusic.gameMusic"></audio-player>
 </body>
 
 </html>
