--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <script src="scripts/helpers/LocalStorageHelperFactory.js"></script>
     
     <audio-player source="'music/CMA-WithoutYou.mp3'" playing="backgroundMusic.menuMusic"></audio-player>
-    <audio-player source="'music/CMA-YoureFree.mp3'" playing="backgroundMusic.gameMusic"></audio-player>
+    <audio-player source="'music/CMA-YoureNotAlone.mp3'" playing="backgroundMusic.gameMusic"></audio-player>
 </body>
 
 </html>
