Music now rotates for HTML5 audio

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
     <script src="scripts/app.js"></script>
     <script src="lib/LodashFactory.js"></script>
     <script src="lib/MomentFactory.js"></script>
+    <script src="scripts/audio/AudioFactory.js"></script>
+    <script src="scripts/audio/CordovaAudioFactory.js"></script>
+    <script src="scripts/audio/Html5AudioFactory.js"></script>
     <script src="scripts/game/CardFactory.js"></script>
     <script src="scripts/game/DeckFactory.js"></script>
     <script src="scripts/game/GameFactory.js"></script>
