--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     <script src="scripts/screens/IndexCtrl.js"></script>
     <script src="scripts/screens/InstructionsCtrl.js"></script>
     <script src="scripts/screens/SettingsCtrl.js"></script>
+    <script src="scripts/screens/CreditsCtrl.js"></script>
     <script src="scripts/shared/AchievementDisplayFactory.js"></script>
     <script src="scripts/shared/ScreenSettingsFactory.js"></script>
     <script src="scripts/shared/BackgroundMusicFactory.js"></script>
