Partially working support for Amazon ads

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
     <script src="scripts/shared/AchievementDisplayFactory.js"></script>
     <script src="scripts/shared/ScreenSettingsFactory.js"></script>
     <script src="scripts/shared/BackgroundMusicFactory.js"></script>
+    <script src="scripts/shared/AmazonAdFactory.js"></script>
     <script src="scripts/modals/PlayerOutModalCtrl.js"></script>
     <script src="scripts/modals/PlayerWonModalCtrl.js"></script>
     <script src="scripts/modals/ResetStatsModalCtrl.js"></script>
