Added iOS home screen icons

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="initial-scale=1,maximum-scale=1.0,user-scalable=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="apple-touch-icon" href="images/ios-icon-57.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="images/ios-icon-76.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="images/ios-icon-120.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="images/ios-icon-152.png">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <title>Ninety-Nine</title>
 
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
@@ -14,7 +20,7 @@
     <link rel="stylesheet" href="bower_components/animate.css/animate.min.css">
 
     <link rel="stylesheet" href="styles/main.css">
-    
+
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="bower_components/lodash/lodash.min.js"></script>
