--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="styles/paper.min.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
 
-    <link rel="stylesheet" href="bower_components/animate.css/animate.min.css">
+    <link rel="stylesheet" href="node_modules/animate.css/animate.min.css">
 
     <link rel="stylesheet" href="styles/main.css">
 
