Switched AngularJS to yarn

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="node_modules/lodash/lodash.min.js"></script>
-    <script src="bower_components/angular/angular.min.js"></script>
+    <script src="node_modules/angular/angular.min.js"></script>
 </head>
 
 <body ng-app="ninetynine" ng-controller="IndexCtrl" class="{{screenSettings.backgroundClass}}" ng-class="{'navbar-padding': screenSettings.navBarVisible, 'banner-ad-padding': ads.bannerAdVisible}">
@@ -53,10 +53,10 @@
 
     <script type="text/javascript" src="cordova.js"></script>
 
-    <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-    <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
-    <script src="bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
+    <script src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
+    <script src="node_modules/angular-sanitize/angular-sanitize.min.js"></script>
+    <script src="node_modules/angular-local-storage/dist/angular-local-storage.min.js"></script>
     <script src="node_modules/moment/min/moment.min.js"></script>
 
     <script src="scripts/app.js"></script>
